<resources>
    <string name="app_name">aisle</string>
    <string name="getotp">Get OTP</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="_91">+91</string>
    <string name="_9999999999">9876543212</string>
    <string name="continue_btn">Continue</string>
    <string name="notes">Notes</string>
    <string name="personal_messages_to_you">Personal messages to you</string>
    <string name="interested_in_you">Interested In You</string>
    <string name="premium_members">Premium members can view all their likes at once</string>
    <string name="upgrade">Upgrade</string>
    <string name="discover">Discover</string>
    <string name="matches">Matches</string>
    <string name="profile">Profile</string>
    <string name="_9999">1234</string>
    <string name="_00_59">00:59</string>
    <string name="enter_the_otp">Enter The OTP</string>
    <string name="meena">Meena</string>
    <string name="tap_to_review_50_notes">Tap to review 50+ notes</string>
    <string name="teena">Teena</string>
    <string name="comma">,  </string>
</resources>